added total characters and remaining to body

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<div class="container">
 		<h2>Real-Time Character Counter</h2>
 		<textarea id="textArea" class="textArea" placeholder="Please write your text here..." maxlength="100"></textarea>
+		<div class="counterContainer">
+			<p>Total Characters: <span class="totalCounter" id="totalCounter">100</span></p>
+			<p>Remaining: <span class="remaining" id="remaining">20</span></p>
+		</div>
 	</div>
   </body>
 </html>
