added js function for remaining characters to update too

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
   <body>
     <div class="container">
       <h2>Real-Time Character Counter</h2>
-      <textarea id="textArea" class="textArea" placeholder="Please write your text here..." maxlength="100"></textarea>
+      <textarea
+        id="textArea"
+        class="textArea"
+        placeholder="Please write your text here..."
+        maxlength="100"
+      ></textarea>
       <div class="counterContainer">
-        <p>Total Characters: <span class="totalCounter" id="totalCounter">100</span></p>
-        <p>Remaining: <span class="remaining" id="remaining">20</span></p>  
+        <p>
+          Total Characters: <span class="totalCounter" id="totalCounter"></span>
+        </p>
+        <p>Remaining: <span class="remaining" id="remaining"></span></p>
       </div>
     </div>
     <script src="index.js"></script>
